--- a/static/others/kemu3-exam.html
+++ b/static/others/kemu3-exam.html
@@ -142,7 +142,7 @@
     const QUESTION_BANK = [
       { id: 2,  text: "夜间在没有路灯、照明不良条件下行驶", answer_index: 0 },
       { id: 3,  text: "夜间在没有路灯、照明不良条件下的市区行驶", answer_index: 1 },
-      { id: 4,  text: "夜间超车，应如何正确使用灯光？", answer_index: 2 },
+      { id: 4,  text: "夜间超车", answer_index: 2 },
       { id: 5,  text: "路边临时停车", answer_index: 3 },
       { id: 6,  text: "夜间同方向近距离跟车行驶", answer_index: 1 },
       { id: 7,  text: "夜间通过急弯、坡路、拱桥、人行横道时", answer_index: 4 },
@@ -162,7 +162,7 @@
     let timer = null;
     let examRunning = false;
 
-    // 渲染一个考试框架
+    // 渲染框架
     function renderExamFrame(titleText = "科目三灯光考试模拟") {
       const app = document.getElementById("app");
       app.innerHTML = `
@@ -181,7 +181,7 @@
       `;
     }
 
-    // 随机打乱
+    // 打乱
     function shuffle(arr) {
       const a = arr.slice();
       for (let i = a.length - 1; i > 0; i--) {
@@ -191,19 +191,24 @@
       return a;
     }
 
-    // 开始一轮考试
+    // 开始一轮
     function startExam(questions = null) {
+      // 如果传进来的是空数组，说明没有错题了，直接走正常抽题
+      if (Array.isArray(questions) && questions.length === 0) {
+        questions = null;
+      }
+
       if (questions === null) {
         currentQuestions = shuffle(QUESTION_BANK).slice(0, 5);
         renderExamFrame("科目三灯光考试模拟");
       } else {
-        // 错题再考
         currentQuestions = questions.length > 5 ? shuffle(questions).slice(0, 5) : questions.slice();
         renderExamFrame("科目三灯光考试模拟（错题再考）");
       }
+
       currentIndex = -1;
       score = 0;
-      wrongQuestions = [];
+      wrongQuestions = [];  // 为下一轮准备
       examRunning = true;
       showNextQuestion();
     }
@@ -326,9 +331,16 @@
         startExam();
       });
 
+      // ⬇⬇⬇ 这里是修过的地方：复制当前错题数组
       if (wrongQuestions.length) {
+        const wrongToReview = wrongQuestions.slice(); // 拷贝一份
         setTimeout(() => {
-          startExam(wrongQuestions);
+          // 再防一层：万一就是空的，就重新随机一轮
+          if (wrongToReview.length > 0) {
+            startExam(wrongToReview);
+          } else {
+            startExam();
+          }
         }, 5000);
       }
     }
