--- a/static/others/kemu3-exam.html
+++ b/static/others/kemu3-exam.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8" />
-  <title>科目三灯光考试模拟（图片版）</title>
+  <title>科目三灯光考试模拟</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
